--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h1>All the Question</h1>
     </div>
     <div class="container2">
-      <div class="card2">
+      <!-- <div class="card2">
         <h1>Question</h1>
         <h4 class="title editData">Question title</h4>
         <div class="display-option">
@@ -100,10 +100,10 @@
         <h1>Answer</h1>
         <h4 class="title editData" target="form">Answer</h4>
         <div class="btn1">
-          <button class="edit" data-id="0">Edit</button>
-          <button class="delete">Delete</button>
+          <button class="edit" data-id="5f491343cfb1f18254e1cf24" target="form">Edit</button>
+          <button class="delete" data-id="5f491343cfb1f18254e1cf24" target="form">Delete</button>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <script src="./app.js"></script>
