--- a/index.html
+++ b/index.html
@@ -106,11 +106,14 @@
           </div>
           <input type="hidden" class="_id" value="0" />
         </form>
+        <div class="header">
+          <a href="#" style="text-decoration:none"><i class="fa fa-window-close">X</i></a>
+        </div>
       </div>
     </div>
     <h1 style="text-align:center">All modules</h1>
     <div class="module-container-Card">
-      <div class="moduleCard">
+      <!-- <div class="moduleCard">
         <h1 >Module Name</h1> 
         <h4 class="title editDatamodule">module title</h4>
         <h1>Course Name</h1>
@@ -120,7 +123,7 @@
         <button class="showAll">Show All</button>
         <button class="delete-module">Delete Module</button>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="container2_heading">
       <h1>All the Question</h1>
