--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           </div>
           <button type="submit" class="submit">Submit</button>
         </form>
+        <div class="header1">
+          <a href="#" style="text-decoration:none"><i class="fa fa-window-close">X</i></a>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -113,61 +116,12 @@
     </div>
     <h1 style="text-align:center">All modules</h1>
     <div class="module-container-Card">
-      <!-- <div class="moduleCard">
-        <h1 >Module Name</h1> 
-        <h4 class="title editDatamodule">module title</h4>
-        <h1>Course Name</h1>
-        <h4 class="title editDatamodule">module description</h4>
-        <div class="module-button">
-        <button class="module-Add-question">Add Question</button>
-        <button class="showAll">Show All</button>
-        <button class="delete-module">Delete Module</button>
-        </div>
-      </div> -->
     </div>
     <div class="container2_heading">
       <h1>All the Question</h1>
     </div>
     <div class="container2">
-  <!-- <div class="card2">
-    <h2>Question</h2>
-    <h5 class="title editData">Question</h5>
-    <div class="optionHere">
-      <div class="display-option">
-        <div>
-          <h4>option 1</h4>
-          <p class="editData">
-            option 1
-          </p>
-        </div>
-        <div>
-          <h4>option 2</h4>
-          <p class="editData">
-            option 2
-          </p>
-        </div>
-      </div>
-    </div>
-    <h1>Answer</h1>
-    <h4 class="title editData">Answer</h4>
-    <h2>Course Name</h2>
-    <h5 class="editData">Course</h5>
-    <h2>Module Name</h2>
-    <h5 class="editData">Module</h5>
-    <h2>Text Color</h2>
-    <h5 class="editData">Text Color</h5>
-    <h2>Text Background</h2>
-    <h5 class="editData">Text Background Color</h5>
-    <h2>BallColor</h2>
-    <h5 class="editData">Ball Color</h5>
-    <h2>Number Of Balls</h2>
-    <h5 class="editData">Number Of Balls</h5>
-    <h2>Speed</h2>
-    <h5 class="editData">Medium</h5>
-    <div class="btn1">
-      <button class="edit" data-id="0">Edit</button>
-      <button class="delete" data-id="0">Delete</button>
-    </div> -->
+ 
   </div>
     </div>
 
