--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="">
             <label for="speed" class="answer-label">Number of Balls </label>
-            <Input id="input" class="NumberOfBalls" name="NumberOfBalls"></Input>
+            <Input id="input" class="NumberOfBalls" type="Number" name="NumberOfBalls"></Input>
           </div>
           <div class="speed">
             <label for="speed" class="answer-label">Choose the Speed</label>
